// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Button Component should render correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "transparent",
      "borderWidth": 1,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 17,
          "lineHeight": 22,
          "textTransform": "none",
        },
      ]
    }
  >
    Facebook
  </Text>
</View>
`;

exports[`Social Button Component should render icon button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "transparent",
      "borderWidth": 1,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 12,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "height": 22,
        "width": 22,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 17,
          "lineHeight": 22,
          "textTransform": "none",
        },
      ]
    }
  >
    Google
  </Text>
</View>
`;
